# anon-music

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: android-inject.mjs  set-app-url.mjs
src/: index.html  lyrics.html  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: lyrics.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/mobile/: LyricOverlay.kt  MainActivity.kt  MusicService.kt
src-tauri/src/: lib.rs  media_android.rs
